# HUMP

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
clients/PHP/: composer.json  helper.php
clients/PHP/src/: Encoding.php  Hump.php  Msg.php
clients/PHP/test/: inc.php  test.php
docker/: docker-compose.yml
src/: App.vue  dump.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Events.vue  HTMLOutput.vue  Hump.vue  InfoBox.vue  Json.vue  Navbar.vue
src/store/: main.js
